--- a/training/03feb2023/practice08.css
+++ b/training/03feb2023/practice08.css
@@ -91,8 +91,13 @@ input{
     width: 100px;
 }
 button{
-    margin-left: 42%;
-    margin-top: 10px;
+    margin-left: 230px;
+    margin-top: 20px;
     margin-bottom: 10px;
+    width: 100px;
+    height:30px;
+    background-color: aqua;
+    border: none;
+    border-radius: 12px;
 }
 
