--- a/training/14feb2023/EvaluationTask/Dashboard/index.css
+++ b/training/14feb2023/EvaluationTask/Dashboard/index.css
@@ -1,24 +1,78 @@
-#main{
-    display: grid;
-    grid-template-columns: 200px auto;
-    column-gap: 0px;
-    /* height: 100%; */
+*{
+    margin: 0;
+    padding: 0;
+
 }
-#navbar{
+body{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    
+
+}
+.navbar{
+    
     border: 1px solid black;
-    background-color: brown;
+    background-color: rgb(190, 97, 97);
+    width: 200px;
+    height: 770px;
+}
+
+.navbar_items{
+    margin: 25px;
+    margin-top: 25%;
+
+}
+.navbar_items .item {
+    background-color: white;
+    margin-top: 50px;
+    height: 50px;
+    width: 130px;
+    text-align: center;
+    padding-top: 10px;
+    border-radius: 5px;
+    color: rgb(40, 39, 37);
     
 }
-#navbar_container{
-
+  .currentUser{
+    margin-left: 14%;
+    margin-top: 20px;
 }
 
-.items{
-    margin-bottom: 10px;
+.body{
+    width: 1260px;
+    border: 1px solid black;
+    
 }
-
-#content{
-    background-color: rgb(219, 219, 219);
+.body .title{
+    margin-left: 70px;
+    margin-top: 10%;
+    font-size: 25px;
+    font-weight: 600;
+}
+.body .userDataContainer{
+    margin-top: 20px;
+    display: flex;
+    margin-left: 10px;
+    flex-direction: row;
+    
+    justify-items: space-around;
+}
+.userData{
+   width: 150px;
+   height: 100px;
+   border: 1px solid black;
+   margin: 20px;
+   text-align: center;
+   padding-top: 50px;
+   border-radius: 10px;
+   
+}
+#card01{
+    background-color: wheat;
+}
+#card02{
+    background-color: rgb(82, 101, 243);
+}
+#card03{
+    background-color:hotpink ;
 }
