--- a/Training/demo/src/app/app.component.css
+++ b/Training/demo/src/app/app.component.css
@@ -2,3 +2,16 @@ ul{
     list-style:none;
     color: blue;
 }
+.red-class{
+    color: red;
+}
+
+.high{
+    background-color: red;
+}
+.normal{
+    background-color: blue;
+}
+.low{
+    background-color: aquamarine;
+}
