--- a/Training/demo/src/app/app.component.html
+++ b/Training/demo/src/app/app.component.html
@@ -61,7 +61,7 @@
 </div>
 
 <ul>
-  <li *ngFor=""></li>
+  <li *ngFor="let item of users"><a [routerLink]="['users',item.id]">{{item.name}}</a></li>
 </ul>
 
 <nav>
