--- a/Training/Angular_Evaluation/emicalc/src/app/home/home.component.html
+++ b/Training/Angular_Evaluation/emicalc/src/app/home/home.component.html
@@ -1,73 +1,128 @@
 <div class="container main">
-    <div class="row m-3">
-        <div class="col-6  emiContainer">
-            <div class="container">
-                <h1>EMI Calculator</h1>
-                <div class="form-group">
-                  <label for="loanAmount">Loan Amount (in Rs.)</label>
-                  <input type="range" class="form-range" min="30000" max="50000000" id="loanAmount" [(ngModel)]="principle" (input)="calculateEMI()">
-                </div>
-                <div class="form-group">
-                  <label for="interestRate">Interest Rate (in %)</label>
-                  <input type="range" class="form-range" min="8" max="16" id="interestRate" [(ngModel)]="rate" (input)="calculateEMI()">
-                </div>
-                <div class="form-group">
-                  <label for="loanTenure">Loan Tenure (in months)</label>
-                  <input type="range" class="form-range" id="loanTenure" min="120" max="360" [(ngModel)]="months" (input)="calculateEMI()">
-                </div>
-                
-                <div class="form-group">
-                  <label for="emiAmount">EMI Amount (in Rs.)</label>
-                  <input type="text" class="form-control" id="emiAmount" [value]="resultEMI">
-                </div>
+  <div class="row-12 m-3">
+    <div class="col-6 emiContainer">
+      <div class="container">
+        <h1>EMI Calculator</h1>
+        <div class="form-group">
+          <div class="wrapper">
+            <div class="wrap">
+              <div class="label">
+                <label for="loanAmount">Loan Amount (in Rs.)</label>
               </div>
-              
-        </div>
-        <div class="col-6 emiData">
+              <div class="h4">
+                {{ principle }}
+              </div>
+            </div>
 
-            <div class="col">
-                <div class="text">Monthly EMI</div>
-                <div class="h2">{{resultEMI}}</div>
-            </div>
-            <div class="col">
-              <div class="text">Total Interest</div>
-              <div class="h2">{{totalIntrest }}</div>
-            </div>
-            <div class="col">
-
-              <div class="text">Total Payable Amount</div>
-              <div class="h2">{{totalPayable}}</div>
-            </div>
-            <div class="col">
-              <div class="text">Interest Percentage</div>
-              <div class="h2">{{interestPercentage}}</div>
+            <input
+              type="range"
+              class="form-range"
+              min="30000"
+              max="50000000"
+              id="loanAmount"
+              [(ngModel)]="principle"
+              (input)="calculateEMI()"
+              style="margin-top: 32px"
+            />
           </div>
         </div>
+        <div class="form-group">
+          <div class="wrapper">
+            <div class="wrap">
+              <div class="label">
+                <label for="loanAmount">Rate of Interest (ROI)</label>
+              </div>
+              <div class="h4">
+                {{ rate }}
+              </div>
+            </div>
+            <input
+              type="range"
+              class="form-range"
+              min="8"
+              max="16"
+              id="interestRate"
+              [(ngModel)]="rate"
+              (input)="calculateEMI()"
+              style="margin-top: 20px"
+            />
+          </div>
+          <div class="form-group">
+            <div class="wrapper">
+              <div class="wrap">
+                <div class="label">
+                  <label for="loanAmount">Loan tenure (in months)</label>
+                </div>
+                <div class="h4">
+                  {{months}}
+                </div>
+              </div> 
+            <input
+              type="range"
+              class="form-range"
+              id="loanTenure"
+              min="120"
+              max="360"
+              [(ngModel)]="months"
+              (input)="calculateEMI()"
+            />
+          </div>
+
+          <div class="form-group">
+            <label for="emiAmount">EMI Amount (in Rs.)</label>
+            <input
+              type="text"
+              class="form-control"
+              id="emiAmount"
+              [value]="resultEMI"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 emiData">
+        <div class="col">
+          <div class="text">Monthly EMI</div>
+          <div class="h2">{{ resultEMI }}</div>
+        </div>
+        <div class="col">
+          <div class="text">Total Interest</div>
+          <div class="h2">{{ totalIntrest }}</div>
+        </div>
+        <div class="col">
+          <div class="text">Total Payable Amount</div>
+          <div class="h2">{{ totalPayable }}</div>
+        </div>
+        <div class="col">
+          <div class="text">Interest Percentage</div>
+          <div class="h2">{{ interestPercentage }}</div>
+        </div>
+      </div>
     </div>
 
     <div class="conatiner_table">
       <table class="table" border="1">
-          <thead>
-            <tr>
-                <th>Payment No.</th>
-                <th>Begining Balance</th>
-                <th>EMI</th>
-                <th>Principal</th>
-                <th>Interest</th>
-                <th>Ending Balance</th>
-            </tr> 
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of tableData()">
-              <td>{{item.index}}</td>
-              <td>{{item.beg_bal}}</td>
-              <td>{{item.emi}}</td>
-              <td>{{item.principle}}</td>
-              <td>{{item.interest}}</td>
-              <td>{{item.end_bal}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>       
-
+        <thead>
+          <tr>
+            <th>Payment No.</th>
+            <th>Begining Balance</th>
+            <th>EMI</th>
+            <th>Principal</th>
+            <th>Interest</th>
+            <th>Ending Balance</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of tableData()">
+            <td>{{ item.index }}</td>
+            <td>{{ item.beg_bal }}</td>
+            <td>{{ item.emi }}</td>
+            <td>{{ item.principle }}</td>
+            <td>{{ item.interest }}</td>
+            <td>{{ item.end_bal }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
