--- a/Training/Observable/observable/src/app/components/header/header.component.html
+++ b/Training/Observable/observable/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Angular Header Example</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Angular Observable</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -16,7 +16,7 @@
           </li>
         </ul>
       </div>
-      <span class="navbar-text">
+      <span class="navbar-text" style="margin-right: 20px;">
         {{ data }}
       </span>
     </nav>
